micronfig_macros/tests/sources/wrong_syntax_type.rs
micronfig::config! {
	GARASAUTO String,
}

fn main() {
	std::env::set_var("GARASAUTO", "garasauto");
	println!("{:#?}", GARASAUTO());
}
